--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "clase6",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,6 +13,17 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
+    "socket.io": "^4.5.3",
     "uuid": "^9.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mariaguaza123/MotoresDePlantillas.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/mariaguaza123/MotoresDePlantillas/issues"
+  },
+  "homepage": "https://github.com/mariaguaza123/MotoresDePlantillas#readme",
+  "description": ""
 }
